# phylanx_plugin_opencv2

./: CMakeLists.txt  README.md
plugin/: CMakeLists.txt  ocv2_plugin.cpp  ocv2_plugin.hpp  opencv2_imread.cpp  opencv2_imread.hpp  opencv2_imread_color.cpp  opencv2_imread_color.hpp  opencv2_imread_gray.cpp  opencv2_imread_gray.hpp  opencv2_plugin.cpp  opencv2_plugin.hpp  opencv2_pyrdown.cpp  opencv2_pyrdown.hpp  opencv2_pyrup.cpp  opencv2_pyrup.hpp
test/: test.py
